kubernetes/apps/home/music-assistant/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: music-assistant-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: music-assistant
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: navidrome
            io.kubernetes.pod.namespace: media
